Banner 1st draft

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>About page</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/example.html">
-</head>
+
+carousel slide {
+  height: 100px;
+}
