--- a/css/about-page.css
+++ b/css/about-page.css
@@ -29,9 +29,32 @@
 body {
   text-align: center;
   background-size: cover;
+  background-repeat: no-repeat;
   /*add more sytles?*/
 }
 header {
   text-align: center;
   background-color: white;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  opacity: 50%;
 }
