--- a/css/index.css
+++ b/css/index.css
@@ -4,9 +4,8 @@ body {
   max-width: 600px;
 }
 div {
-  height: 400px;
   background-size: cover;
-  position: relative;
+  position: center;
   margin: 40px 0 0 0;
   border-radius: 12px;
 }
@@ -15,9 +14,9 @@ div {
 p {
   color: rgba(255,255,255,1);
   background: rgba(0,0,0,1);
-  padding: 10px;
+  padding: 20px;
   line-height: 28px;
-  text-align: justify;
+  text-align: center;
   position: absolute;
   bottom: 0;
   margin: 0;
