--- a/css/index.css
+++ b/css/index.css
@@ -1,27 +1,53 @@
 body {
   font-family: helvetica, sans-serif;
   margin: 0 auto;
-  max-width: 600px;
+  padding-top: 4em;
+}
+.navbar-brand {
+  width: 5%;
+  height: 5%;
 }
 div {
   background-size: cover;
   position: center;
-  margin: 40px 0 0 0;
+  margin: 0 0 0 0;
   border-radius: 12px;
 }
 
-<<<<<<< HEAD
 p {
+  border-width: 10px;
+  border-style: solid;
+  border-color: rgba(40,70,86,1);
+
+  text-align: center;
   color: rgba(255,255,255,1);
+  background: rgba(55,55,55,1);
+  padding: 50px;
+  line-height: 28px;
+
+  /* color: rgba(255,255,255,1);
   background: rgba(0,0,0,1);
   padding: 20px;
   line-height: 28px;
   text-align: center;
   position: absolute;
   bottom: 0;
-  margin: 0;
-=======
-body {
+  margin: 0; */
+/* body {
   carousel-item: 50%;
->>>>>>> 600c4b2f85af5fbb5bfe99262247979e12c7631b
+} */
+
+.hh-25 {
+  height: 200px;
+}
+
+main {
+  padding-top: 5em;
+  padding-left: 2em;
+}
+.vertical-center {
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh; /* These two lines are counted as one 🙂       */
+  display: flex;
+  align-items: center;
 }
