--- a/css/about-page.css
+++ b/css/about-page.css
@@ -7,6 +7,15 @@
   margin: 5px 2px;
 }
 
+.navbar-brand {
+  width: 5%;
+  height: 5%;
+}
+
+.navbar h1{
+  color: white;
+}
+
 .fa:hover {
     opacity: 0.7;
 }
@@ -35,6 +44,10 @@ body {
 header {
   text-align: center;
   background-color: white;
+}
+
+.bg {
+  background-image: url("ARTWORK_DOCUMENTS/photo.jpg");
 }
 
 ul {
