--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,13 @@
 body {
   font-family: helvetica, sans-serif;
   margin: 0 auto;
-  padding-top: 4em;
 }
 .navbar-brand {
   width: 5%;
   height: 5%;
+}
+.navbar h1{
+  color: white;
 }
 
 div {
