--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,52 @@
+.sandbox-correct-pronounciation {
+  padding: 3em 0 3em 0;
+  	background-color: rgba(40, 70,86, 1);
+}
+
+.heading-correct-pronounciation {
+
+  margin: auto;
+  text-align: center;
+  position: relative;
+}
+
+
+h5 {
+
+  font-family: 'Cardo', serif;
+  font-size: 1.5em;
+  font-weight: normal;
+  font-style: italic;
+  letter-spacing: 0.1em;
+  line-height: 2.2em;
+  color:white;
+}
+
+em {
+  font-family: helvetica, sans-serif;
+  font-size: 3.5em;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  display: block;
+  font-style:normal;
+  padding-top: 0.3em;
+  text-shadow: 0.07em 0.07em 0 rgba(0, 0, 0, 0.1);
+
+  &::before, &::after {
+  content: "§";
+  display: inline-block;
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+    opacity: 0.2;
+  margin: 0 0.9em;
+  font-size: 0.5em;
+}
+
+}
+
 body {
   font-family: helvetica, sans-serif;
   margin: 0 auto;
