--- a/css/about-page.css
+++ b/css/about-page.css
@@ -1,10 +1,36 @@
-.fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
+.sandbox-correct-pronounciation {
+  padding: 1em 0 1em 0;
+  	background-color: rgba(40, 70,86, 1);
+}
+
+.heading-correct-pronounciation {
+
+  margin: auto;
   text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
+  position: relative;
+}
+
+h5 {
+
+  font-family: 'Cardo', serif;
+  font-size: 1.5em;
+  font-weight: normal;
+  font-style: italic;
+  letter-spacing: 0.1em;
+  line-height: 2.2em;
+  color:white;
+}
+
+em {
+  font-family: helvetica, sans-serif;
+  font-size: 3.5em;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  display: block;
+  font-style:normal;
+  padding-top: 0.3em;
+  text-shadow: 0.07em 0.07em 0 rgba(255, 255, 255, 0.3);
+  color: white;
 }
 
 .navbar-brand {
@@ -13,25 +39,6 @@
 }
 
 .navbar h1{
-  color: white;
-}
-
-.fa:hover {
-    opacity: 0.7;
-}
-
-.fa-facebook {
-  background: #3B5998;
-  color: white;
-}
-
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
-}
-
-.fa-instagram {
-  background: #125688;
   color: white;
 }
 
