--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,9 @@
-.sandbox-correct-pronounciation {
+.sandbox-Antrea {
   padding: 3em 0 3em 0;
   	background-color: rgba(40, 70,86, 1);
 }
 
-.heading-correct-pronounciation {
+.heading-Antrea {
 
   margin: auto;
   text-align: center;
