--- a/css/about-page.css
+++ b/css/about-page.css
@@ -10,19 +10,15 @@
   position: relative;
 }
 
-.sandbox h5 {
+h5 {
 
-  font-family: helvetica, sans-serif;
-  font-size: 1em;
+  font-family: 'Cardo', serif;
+  font-size: 1.5em;
   font-weight: normal;
   font-style: italic;
   letter-spacing: 0.1em;
   line-height: 2.2em;
-  color: white;
-}
-
-main {
-  padding-bottom: 10px;
+  color:white;
 }
 
 em {
@@ -61,10 +57,6 @@ header {
   background-image: url("ARTWORK_DOCUMENTS/photo.jpg");
 }
 
-p {
-  padding-left: 20px;
-}
-
 ul {
   list-style-type: none;
   margin: 0;
@@ -85,8 +77,4 @@ li a {
 
 li a:hover {
   opacity: 50%;
-}
-
-.socialButtons:hover {
-  opacity: 0.5;
 }
