Revert "Update about-page.css"
This reverts commit 89bc510394d7bc68062638a2ef9e0edee1f91483.

--- a/css/about-page.css
+++ b/css/about-page.css
@@ -1,9 +1,9 @@
-.sandbox-Antrea {
+.sandbox-correct-pronounciation {
   padding: 1em 0 1em 0;
   	background-color: rgba(40, 70,86, 1);
 }
 
-.heading-Antrea {
+.heading-correct-pronounciation {
 
   margin: auto;
   text-align: center;
